k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: static-label

  template:
    metadata:
      labels:
        app: static-label

    spec:
      containers:
        - name: static
          image: praveenedward/static:v1
          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: 100m
              memory: 64Mi

            limits:
              cpu: 200m
              memory: 128Mi
