k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-service

spec:
  type: ClusterIP
  selector:
    app: static-label

  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
